# ibmcloud-watsonassistant-sdk

./: Cargo.toml
src/: lib.rs
src/assistant/: mod.rs  v2.rs
